# dirsrv-exporter

./: Containerfile  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yaml  post-push.yaml
src/dirsrv_exporter/: __init__.py  collector.py  threading.py
